# Renderer

./: .gitignore  CMakeLists.txt  README.md
res/shader/: Basic.glsl
res/shaders/: Basic.shader
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  main.cpp
